--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL="postgresql://user:password@localhost:5432/trust_innovation_db?schema=public"
+DIRECT_URL="postgresql://user:password@localhost:5432/trust_innovation_db?schema=public"
+FRONTEND_URL="http://localhost:5173"
